summative.moria.Moria.scala.code
right();
right();
while(isFacingWall==false){
  while(isOverBaggle==false){
    if (isFacingWall==false){
      forward();
  }
  pickupBaggle();
  while (isOverBaggle==false){
    backward();
  }
  forward();
  dropBaggle();
  forward();
}
right();
forward();
left();
forward();